# qr-paste

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  biome.jsonc  client.example.toml  server.example.toml
.cargo/: audit.toml
.github/workflows/: release.yml
client/: Cargo.toml  build.rs
client/src/: clipboard.rs  config.rs  grpc.rs  icon.rs  main.rs  tray.rs  ui.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: haproxy.cfg.example  nginx.conf.example
proto/: relay.proto
server/: Cargo.toml  build.rs
server/src/: config.rs  grpc.rs  main.rs  pairing.rs  session.rs  web.rs
server/src/web/: index.html
