[workspace]
members = ["client", "common", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release.package.client]
opt-level = "z"
