[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qr-paste-client"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
common = { path = "../common" }
eframe = "0.34"
egui = "0.34"
egui-cjk-font = "0.2"
enigo = "0.6"
image = { version = "0.25", features = ["png"] }
prost = "0.14"
qrcode = "0.14"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.51", features = ["rt", "net", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.22"
uuid = { version = "1.23", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
winresource = "0.1"
