[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.50", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
uuid = { version = "1.23", features = ["v4"] }
tower_governor = "0.8"
tower = { version = "0.5", features = ["limit"] }
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
futures = "0.3"
tokio-stream = "0.1"
subtle = "2"
common = { path = "../common" }
anyhow = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
