[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qr-paste-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
common = { path = "../common" }
dashmap = "6.1"
futures = "0.3"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
toml = "1.1"
tonic = "0.14"
tonic-prost = "0.14"
tower = { version = "0.5", features = ["limit"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
