[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qr-paste-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
common = { path = "../common" }
dashmap = "6.1"
futures = "0.3"
governor = "0.10"
ipnet = "2.12"
prost = "0.14"
rand = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2"
tokio = { version = "1.51", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
tonic = "0.14"
tonic-prost = "0.14"
tower = { version = "0.5", features = ["limit"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.23", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
